--- a/test_reverb/get_stock_data.ipynb
+++ b/test_reverb/get_stock_data.ipynb
@@ -26,19 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# news api key : \n",
-    "# 16111b4976684a4b8f07dedf332b8e60\n",
-    "\n",
-    "# {'id': 'cnbc', 'url': 'http://www.cnbc.com',\n",
-    "#  'description': 'Get latest business news on stock markets, financial & earnings on CNBC. View world markets streaming charts & video; check stock tickers and quotes.', \n",
-    "#  'name': 'CNBC', 'country': 'us', 'category': 'business', 'language': 'en'}, \n",
-    "\n",
-    "# Init\n",
-    "API_KEY = \"16111b4976684a4b8f07dedf332b8e60\"\n",
-    "# newsapi = NewsApiClient(api_key= API_KEY)\n",
-    "\n",
-    "# /v2/sources\n",
-    "# sources = newsapi.get_sources()"
+    "# define\n",
+    "API_KEY = \"25IEBEKH83S6MQOE\""
    ]
   },
   {
@@ -52,10 +41,28 @@
     "page_num = 1\n",
     "page_size = 100\n",
     "\n",
-    "url_params = {\"q\":\"google\", \"page\": page_num, \"pageSize\": page_size, \"apiKey\": API_KEY}\n",
+    "url_params = {\"function\":\"TIME_SERIES_DAILY_ADJUSTED\", \"symbol\": MSFT, \"outputsize\": full, \"apikey\": API_KEY}\n",
+    "everything_url=\"https://www.alphavantage.co/query?\"\n",
+    "r = requests.get(everything_url, params=url_params)\n",
     "\n",
-    "everything_url=\"https://newsapi.org/v2/everything?\"\n",
-    "r = requests.get(everything_url, params=url_params)"
+    "# \"Meta Data\": {\n",
+    "#         \"1. Information\": \"Daily Time Series with Splits and Dividend Events\",\n",
+    "#         \"2. Symbol\": \"MSFT\",\n",
+    "#         \"3. Last Refreshed\": \"2018-05-08\",\n",
+    "#         \"4. Output Size\": \"Full size\",\n",
+    "#         \"5. Time Zone\": \"US/Eastern\"\n",
+    "#     },\n",
+    "# \"Time Series (Daily)\": {\n",
+    "#      \"2018-05-08\": {\n",
+    "#             \"1. open\": \"95.8456\",\n",
+    "#             \"2. high\": \"96.1600\",\n",
+    "#             \"3. low\": \"95.0631\",\n",
+    "#             \"4. close\": \"95.8100\",\n",
+    "#             \"5. adjusted close\": \"95.8100\",\n",
+    "#             \"6. volume\": \"23484589\",\n",
+    "#             \"7. dividend amount\": \"0.0000\",\n",
+    "#             \"8. split coefficient\": \"1.0000\"\n",
+    "#         },"
    ]
   },
   {
@@ -78,9 +85,8 @@
     "%%time\n",
     "rtext = json.loads(r.text)\n",
     "\n",
-    "status = rtext[\"status\"]\n",
-    "articles = rtext[\"articles\"]\n",
-    "totalResults = rtext[\"totalResults\"]\n",
+    "status = rtext[\"Meta Data\"]\n",
+    "articles = rtext[\"Time Series (Daily)\"]\n",
     "\n",
     "print(\"status: \", status, \" | totalResults: \", totalResults, \" | page_num: \", page_num, \" | page_size: \", page_size)\n",
     "articles = rtext[\"articles\"]\n",
@@ -152,67 +158,6 @@
     "\n",
     "for da in newlist[:30]:\n",
     "    print(da[\"time\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%time\n",
-    "# # top-headlines 查询好像不是很好用\n",
-    "\n",
-    "# # /v2/top-headlines\n",
-    "# url_params = {\"q\":\"google\", \"page\": 2, \"pageSize\": 100, \"apiKey\": API_KEY}\n",
-    "\n",
-    "# headlines_url = \"https://newsapi.org/v2/top-headlines?\"\n",
-    "# r = requests.get(headlines_url, params=url_params)\n",
-    "\n",
-    "# rtext = json.loads(r.text)\n",
-    "\n",
-    "# status = rtext[\"status\"]\n",
-    "# articles = rtext[\"articles\"]\n",
-    "# totalResults = rtext[\"totalResults\"]\n",
-    "\n",
-    "# print(\"status : \", status, \"  |  totalResults : \", totalResults)\n",
-    "# articles = rtext[\"articles\"]\n",
-    "\n",
-    "# print(\"articles_type : \", type(articles), \"articles_len : \",  len(articles))\n",
-    "\n",
-    "# data_res = []\n",
-    "# for arti in articles:\n",
-    "#     data_dict = dict()\n",
-    "#     arti_url = arti[\"url\"]\n",
-    "#     arti_time = arti[\"publishedAt\"]\n",
-    "#     arti_desc = arti[\"description\"]\n",
-    "#     arti_title = arti[\"title\"]\n",
-    "#     arti_source = arti[\"source\"]\n",
-    "    \n",
-    "#     data_dict[\"time\"] = arti_time\n",
-    "#     data_dict[\"title\"] = arti_title\n",
-    "#     data_res.append(data_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%time\n",
-    "# # 不能用，因为和http的api不配套，有些参数没办法用，比如pageSize和from\n",
-    "# # /v2/top-headlines\n",
-    "# top_headlines = newsapi.get_top_headlines(q=\"stock\", sources='CNN')  ## cnn-money\n",
-    "# print(top_headlines)\n",
-    "\n",
-    "# top_headlines = newsapi.get_everything(q=\"facebook\" , to='2018-05-08', pageSize = 100,sources='bloomberg')\n",
-    "\n",
-    "# top_headlines = newsapi.get_everything(to='2017-01-15', sources='reuters')\n",
-    "# print(top_headlines)\n",
-    "\n",
-    "# top_headlines = newsapi.get_everything(to='2017-01-15', sources='MSNBC')\n",
-    "# print(top_headlines)"
    ]
   }
  ],
