处理数据,包括保存股票价格为和前一天比较的涨跌结果,而不是单纯的价格;重新修改获取股票价格的api和代码;把reverb处理的结果进一步筛选需要的三元组信息,并和时间以及股票涨跌结果保存为train_reduce.pkl文件;

--- a/test_reverb/get_stock_data.ipynb
+++ b/test_reverb/get_stock_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "page_num = 1\n",
     "page_size = 100\n",
     "\n",
-    "url_params = {\"function\":\"TIME_SERIES_DAILY_ADJUSTED\", \"symbol\": MSFT, \"outputsize\": full, \"apikey\": API_KEY}\n",
+    "url_params = {\"function\":\"TIME_SERIES_DAILY_ADJUSTED\", \"symbol\": \".INX\", \"outputsize\": \"full\", \"apikey\": API_KEY}\n",
     "everything_url=\"https://www.alphavantage.co/query?\"\n",
     "r = requests.get(everything_url, params=url_params)\n",
     "\n",
@@ -67,17 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "status:  ok  | totalResults:  334614  | page_num:  1  | page_size:  100\n",
-      "articles_type :  <class 'list'> articles_len :  100\n",
-      "CPU times: user 1.55 ms, sys: 0 ns, total: 1.55 ms\n",
-      "Wall time: 1.42 ms\n"
+      "status:  {'1. Information': 'Daily Time Series with Splits and Dividend Events', '2. Symbol': 'S&P500 Index', '3. Last Refreshed': '2018-05-25', '4. Output Size': 'Full size', '5. Time Zone': 'US/Eastern'}  | page_num:  1  | page_size:  100\n",
+      "<class 'dict'> 4607 {'1. open': '1469.2500', '2. high': '1478.0000', '3. low': '1438.3600', '4. close': '1455.2200', '5. adjusted close': '1455.2200', '6. volume': '931800000', '7. dividend amount': '0.0000', '8. split coefficient': '1.0000'}\n",
+      "CPU times: user 43.8 ms, sys: 3.58 ms, total: 47.4 ms\n",
+      "Wall time: 48.4 ms\n"
      ]
     }
    ],
@@ -88,76 +88,38 @@
     "status = rtext[\"Meta Data\"]\n",
     "articles = rtext[\"Time Series (Daily)\"]\n",
     "\n",
-    "print(\"status: \", status, \" | totalResults: \", totalResults, \" | page_num: \", page_num, \" | page_size: \", page_size)\n",
-    "articles = rtext[\"articles\"]\n",
+    "print(\"status: \", status,   \" | page_num: \", page_num, \" | page_size: \", page_size)\n",
+    "# articles = rtext[\"articles\"]\n",
     "\n",
-    "print(\"articles_type : \", type(articles), \"articles_len : \",  len(articles))\n",
-    "\n",
-    "data_res = []\n",
-    "for arti in articles:\n",
-    "    data_dict = dict()\n",
-    "    arti_url = arti[\"url\"]\n",
-    "    arti_time = arti[\"publishedAt\"]\n",
-    "    arti_desc = arti[\"description\"]\n",
-    "    arti_title = arti[\"title\"]\n",
-    "    arti_source = arti[\"source\"]\n",
+    "# print(\"articles_type : \", type(articles), \"articles_len : \",  len(articles))\n",
+    "print(type(articles), len(articles), articles[\"2000-01-03\"] )\n",
+    "# data_res = []\n",
+    "# for arti in articles:\n",
+    "#     data_dict = dict()\n",
+    "#     arti_url = arti[\"url\"]\n",
+    "#     arti_time = arti[\"publishedAt\"]\n",
+    "#     arti_desc = arti[\"description\"]\n",
+    "#     arti_title = arti[\"title\"]\n",
+    "#     arti_source = arti[\"source\"]\n",
     "    \n",
-    "    data_dict[\"time\"] = arti_time\n",
-    "    data_dict[\"title\"] = arti_title\n",
-    "    data_res.append(data_dict)"
+    "#     data_dict[\"time\"] = arti_time\n",
+    "#     data_dict[\"title\"] = arti_title\n",
+    "#     data_res.append(data_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "46 100\n",
-      "2018-02-13T00:43:41Z\n",
-      "2018-02-13T18:06:10Z\n",
-      "2018-02-17T17:23:38Z\n",
-      "2018-02-18T07:52:02Z\n",
-      "2018-02-20T13:30:00Z\n",
-      "2018-02-20T15:07:11Z\n",
-      "2018-02-20T15:46:00Z\n",
-      "2018-02-20T16:28:02Z\n",
-      "2018-02-21T08:37:45Z\n",
-      "2018-02-21T08:57:00Z\n",
-      "2018-02-21T11:32:55Z\n",
-      "2018-02-21T14:15:00Z\n",
-      "2018-02-21T20:27:54Z\n",
-      "2018-02-22T14:58:33Z\n",
-      "2018-02-23T14:51:44Z\n",
-      "2018-02-23T15:38:21Z\n",
-      "2018-02-25T12:01:47Z\n",
-      "2018-03-01T09:56:24Z\n",
-      "2018-03-02T23:09:18Z\n",
-      "2018-03-05T02:57:39Z\n",
-      "2018-03-06T15:55:29Z\n",
-      "2018-03-09T13:16:57Z\n",
-      "2018-03-11T12:20:14Z\n",
-      "2018-03-14T16:12:38Z\n",
-      "2018-03-16T08:53:17Z\n",
-      "2018-03-18T11:13:14Z\n",
-      "2018-03-20T18:03:52Z\n",
-      "2018-03-21T08:23:41Z\n",
-      "2018-03-21T16:52:48Z\n",
-      "2018-03-22T16:01:20Z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(len(data_dict[\"title\"]), len(data_res))\n",
+    "# print(len(data_dict[\"title\"]), len(data_res))\n",
     "\n",
-    "from operator import itemgetter\n",
-    "newlist = sorted(data_res, key=itemgetter('time')) \n",
+    "# from operator import itemgetter\n",
+    "# newlist = sorted(data_res, key=itemgetter('time')) \n",
     "\n",
-    "for da in newlist[:30]:\n",
-    "    print(da[\"time\"])"
+    "# for da in newlist[:30]:\n",
+    "#     print(da[\"time\"])"
    ]
   }
  ],
@@ -177,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
