first finished version.

--- a/word2Vec.ipynb
+++ b/word2Vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,82 +44,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-- 2010-02-05T11:54:40Z</td>\n",
-       "      <td>-- Royal Opera House Chief Tony Hall Appointed...</td>\n",
+       "      <td>2006-10-27</td>\n",
+       "      <td>balda say investor asks</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-- 2006-12-14T15:12:30Z</td>\n",
-       "      <td>-- Vale's Indonesia Nickel Unit May Cut Output...</td>\n",
+       "      <td>2006-11-01</td>\n",
+       "      <td>ace lift pay</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-- 2008-12-29T20:53:34Z</td>\n",
-       "      <td>-- 10 Mantras for Emerging Leaders in 2009</td>\n",
+       "      <td>2006-11-09</td>\n",
+       "      <td>firstrand say law may pare fees</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-- 2008-02-14T04:05:04Z</td>\n",
-       "      <td>-- Hewlett-Packard Settles Claim by Reporters ...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2006-11-16</td>\n",
+       "      <td>wheeling-pittsburgh say esmark deal</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-- 2008-02-14T21:14:32Z</td>\n",
-       "      <td>-- New York's Dinallo Considers Splitting Bond...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2006-11-22</td>\n",
+       "      <td>norilsk want tajik silver mine</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  ari_time                                          ari_title  \\\n",
-       "0  -- 2010-02-05T11:54:40Z  -- Royal Opera House Chief Tony Hall Appointed...   \n",
-       "1  -- 2006-12-14T15:12:30Z  -- Vale's Indonesia Nickel Unit May Cut Output...   \n",
-       "2  -- 2008-12-29T20:53:34Z         -- 10 Mantras for Emerging Leaders in 2009   \n",
-       "3  -- 2008-02-14T04:05:04Z  -- Hewlett-Packard Settles Claim by Reporters ...   \n",
-       "4  -- 2008-02-14T21:14:32Z  -- New York's Dinallo Considers Splitting Bond...   \n",
-       "\n",
-       "   price  \n",
-       "0      0  \n",
-       "1      0  \n",
-       "2      0  \n",
-       "3      0  \n",
-       "4      0  "
+       "     ari_time                            ari_title  price\n",
+       "0  2006-10-27              balda say investor asks      0\n",
+       "1  2006-11-01                         ace lift pay      0\n",
+       "2  2006-11-09      firstrand say law may pare fees      0\n",
+       "3  2006-11-16  wheeling-pittsburgh say esmark deal      1\n",
+       "4  2006-11-22       norilsk want tajik silver mine      1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df = pd.read_pickle(\".//train.pkl\")\n",
+    "train_df = pd.read_pickle(\"./train_reduce.pkl\")\n",
     "# test_df = pd.read_pickle(\"../input/hw2pkl/test.pkl\")\n",
     "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "60502    -- Banca Popolare di Milano Says It Doesn't Ne...\n",
-       "34484    -- Goldman Sachs-Backed Emissions Exchange Is ...\n",
-       "36918    -- Barclays Hires Goldman's Koo, BNP's Lim to ...\n",
-       "52073    -- Apax, Guardian Studying $3.2 Billion Sale o...\n",
-       "29067    -- Mexican Tortillas Assure Carstens Lending R...\n",
+       "2081                  pork-price jump show demand gain\n",
+       "2473    south african bread prices rise on russian ban\n",
+       "3119                                        2010-06-16\n",
+       "753              norway leave benchmark rate unchanged\n",
+       "3789                                        2010-10-15\n",
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,25 +124,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 11s, sys: 321 ms, total: 1min 11s\n",
-      "Wall time: 26.3 s\n"
+      "CPU times: user 1.94 s, sys: 36.1 ms, total: 1.98 s\n",
+      "Wall time: 1.04 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "# CPU times: user 1min 11s\n",
-    "model = Word2Vec(corpus, size=250, iter=10)\n",
+    "model = Word2Vec(corpus, size=50, iter=10)\n",
     "model.save('word2vec.model')\n",
     "# model = Word2Vec.load('word2vec.model')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
