--- a/main.ipynb
+++ b/main.ipynb
@@ -65,13 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get data\n",
-    "# get texts data\n",
-    "category2idx = {'AllTogether': 0, 'Baseball': 1, 'Boy-Girl': 2, 'C_chat':  3, 'CVS': 4,\n",
-    "                  'GameSale': 5, 'GetMarry': 6, 'Lifeismoney': 7, 'LoL': 8, 'MH': 9, 'MLB': 10, 'Mobilecomm': 11, \n",
-    "                'movie': 12,'MuscleBeach':  13, 'NBA': 14,  'SENIORHIGH': 15, 'Stock': 16, \n",
-    "                'Tennis': 17, 'Tos': 18, 'WomenTalk': 19}\n",
-    "\n",
+    "# Read data\n",
     "train_df_sample = pd.read_pickle('train_reduce.pkl').sample(frac=1, random_state=123)\n",
     "train_texts = train_df_sample.ari_title\n",
     "label_list = train_df_sample.price\n",
@@ -419,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.save('my_model.h5') "
+    "model.save('my_model.h5') "
    ]
   },
   {
@@ -598,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
