Simplify and prevent data lost while post-processing OpenIE extraction result.

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "<class 'dict'> 2 dict_keys(['Meta Data', 'Time Series (Daily)'])\n",
-      "{'4. Output Size': 'Full size', '3. Last Refreshed': '2018-06-14', '1. Information': 'Daily Time Series with Splits and Dividend Events', '2. Symbol': 'S&P500 Index', '5. Time Zone': 'US/Eastern'} \n",
+      "{'1. Information': 'Daily Time Series with Splits and Dividend Events', '4. Output Size': 'Full size', '3. Last Refreshed': '2018-06-14', '5. Time Zone': 'US/Eastern', '2. Symbol': 'S&P500 Index'} \n",
       "\n",
       "4642\n",
-      "CPU times: user 48.5 ms, sys: 36.4 ms, total: 84.9 ms\n",
-      "Wall time: 6.31 s\n"
+      "CPU times: user 49.7 ms, sys: 49.2 ms, total: 99 ms\n",
+      "Wall time: 5.91 s\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "<class 'list'>\n",
-      "{'4. close': '1455.2200', '5. adjusted close': '1455.2200', '1. open': '1469.2500', '8. split coefficient': '1.0000', '2. high': '1478.0000', '7. dividend amount': '0.0000', '6. volume': '931800000', '3. low': '1438.3600'} 1455.2200\n",
+      "{'4. close': '1455.2200', '2. high': '1478.0000', '5. adjusted close': '1455.2200', '1. open': '1469.2500', '6. volume': '931800000', '8. split coefficient': '1.0000', '3. low': '1438.3600', '7. dividend amount': '0.0000'} 1455.2200\n",
       "4642 4642\n",
       "1 1455.2200\n",
       "0 1399.4200\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.57 s, sys: 576 ms, total: 3.15 s\n",
-      "Wall time: 3.15 s\n"
+      "CPU times: user 2.6 s, sys: 557 ms, total: 3.15 s\n",
+      "Wall time: 3.16 s\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,15 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 27.1 ms, sys: 20 ms, total: 47.1 ms\n",
-      "Wall time: 46.3 ms\n"
+      "CPU times: user 28.4 ms, sys: 13.3 ms, total: 41.6 ms\n",
+      "Wall time: 39.1 ms\n"
      ]
     }
    ],
@@ -238,15 +238,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5 µs, sys: 2 µs, total: 7 µs\n",
-      "Wall time: 15 µs\n"
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 6.44 µs\n"
      ]
     }
    ],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
