Data manipulation proccess correction.

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,16 @@
      "output_type": "stream",
      "text": [
       "Shape of training data frames: (55483, 3)\n",
-      "2006-10-20T20:16:16Z ::: Inco's Net Soars on Higher Metal Prices, Breakup Fee\n"
+      "2006-10-20T20:16:16Z ::: Inco's Net Soars on Higher Metal Prices, Breakup Fee\n",
+      "2000-01-03\n",
+      "2006-10-23T11:51:36Z ::: EU Energy Chief Backs German Plan for Price Controls\n",
+      "2000-01-04\n",
+      "2006-10-23T20:00:29Z ::: Ex-Plant Worker Shuster Pleads Guilty in Trading Case\n",
+      "2000-01-05\n",
+      "2006-10-24T10:53:59Z ::: Russia, Ukraine End Dispute That Cut Gas Supplies\n",
+      "2000-01-06\n",
+      "2006-10-24T01:32:04Z ::: Jim Cramer: Bare Escentuals, Allergan, Medicis, Avon\n",
+      "2000-01-07\n"
      ]
     }
    ],
@@ -214,7 +223,9 @@
     "print(\"Shape of training data frames:\", train_df.shape)\n",
     "\n",
     "# Print data for checking\n",
-    "print(train_df[\"ari_time\"][0], ':::', train_df[\"ari_title\"][0])"
+    "for i in range(5):\n",
+    "    print(train_list[i][0], ':::', train_list[i][1])\n",
+    "    print(list(ostock_data_dict.keys())[i])"
    ]
   },
   {
@@ -261,14 +272,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(55483, 3) <class 'pandas.core.frame.DataFrame'>\n",
+      "(55483, 3)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
       "0     1\n",
       "1     1\n",
       "2     1\n",
@@ -304,10 +316,9 @@
     }
    ],
    "source": [
-    "print( pickle_df.shape, type(pickle_df))\n",
-    "# pickle_df[:3][\"price\"] = 10\n",
-    "print(pickle_df[:30][\"price\"])\n",
-    "# pickle_df.shape"
+    "print(pickle_df.shape)\n",
+    "print(type(pickle_df))\n",
+    "print(pickle_df[:30][\"price\"])"
    ]
   },
   {
