--- a/word2Vec.ipynb
+++ b/word2Vec.ipynb
@@ -9,7 +9,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from gensim.models.word2vec import Word2Vec"
+    "from gensim.models.word2vec import Word2Vec\n",
+    "from gensim.utils import simple_preprocess"
    ]
   },
   {
@@ -103,26 +104,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0            balda say investor asks\n",
-       "1                       ace lift pay\n",
-       "2     namibian investors buy absa 's\n",
-       "3    firstrand say law may pare fees\n",
-       "4        china stocks rise 30 % in #\n",
-       "Name: ari_title, dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['balda', 'say', 'investor', 'asks'], ['ace', 'lift', 'pay'], ['namibian', 'investors', 'buy', 'absa'], ['firstrand', 'say', 'law', 'may', 'pare', 'fees'], ['china', 'stocks', 'rise', 'in']]\n",
+      "CPU times: user 242 ms, sys: 4.52 ms, total: 247 ms\n",
+      "Wall time: 245 ms\n"
+     ]
     }
    ],
    "source": [
-    "corpus = train_df['ari_title']\n",
-    "# corpus = pd.concat([train_df.ari_time, train_df.ari_title])\n",
-    "# print(corpus)\n",
-    "corpus.head()"
+    "%%time\n",
+    "\n",
+    "corpus = list(map(simple_preprocess, train_df['ari_title']))\n",
+    "\n",
+    "print(corpus[0:5])"
    ]
   },
   {
@@ -134,16 +130,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.17 s, sys: 29.2 ms, total: 3.2 s\n",
-      "Wall time: 1.59 s\n"
+      "Word2Vec(vocab=2331, size=50, alpha=0.025)\n",
+      "CPU times: user 1.89 s, sys: 41.5 ms, total: 1.93 s\n",
+      "Wall time: 1.01 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# CPU times: user 1min 11s\n",
-    "model = Word2Vec(corpus, size=50, iter=10)\n",
-    "model.save('word2vec.model')"
+    "EMBEDDING_DIM=50\n",
+    "\n",
+    "model = Word2Vec(corpus, size=EMBEDDING_DIM, iter=10)\n",
+    "model.save('word2vec.model')\n",
+    "\n",
+    "print(model)"
    ]
   },
   {
